syntax = "proto3";
package Message;
option java_package = "game.proto";
option optimize_for = SPEED;
option java_multiple_files = true;
import "data.proto";
message Message {
    int32 version = 1;
    int32 msgNo = 2;
    int32 error = 3;
    int32 seq = 4;
    bytes body = 10;

}
message Empty {
}
message Success {
}

// 登录
// 1
message LoginReq {
    int64 playerId = 1;
    string code = 2;
}

// 1 登录信息
message LoginRes {
    PlayerData data = 1;
    bool first = 3;
}
//2
message KickPush {
}

//3
message PlayerCreateNameReq {
    string name = 1;
}
//10~1000 后端使用
// 10 tick
// 11 dataSave

// 1001 接受任务
message TaskReq {
    int32 taskId = 1;
}
